<resources>
  <string name="app_name">Dictionary</string>
  <string name="title_activity_home">Home</string>
  <string name="lang_english">English</string>
  <string name="lang_meitei_mayek">Meitei Mayek</string>
  <string name="lang_bengali">Bengali</string>
  <string name="nav_header_title">@string/app_name</string>
  <string name="nav_header_subtitle"> </string>
  <string name="nav_header_desc"> </string>
  <string name="nav_home">Home</string>
  <string name="nav_account">Account</string>
  <string name="nav_settings">Settings</string>
  <string name="nav_communicate">Communicate</string>
  <string name="nav_share">Share</string>
  <string name="nav_about">About</string>
  <string name="tab_favorite">Favorite</string>
  <string name="tab_browse">Browse</string>
  <string name="choose_a_language">Choose a language :</string>
  <string name="title_activity_browse">Browse</string>
  <string name="title_activity_search">Search</string>
  <string name="downloading">Downloading…</string>
  <string name="no_result_found">No Result Found…</string>
  <string name="no_favorite_yet">No Favorite Yet…</string>
  <string name="gyanendrokh">Gyanendro Kh</string>
  <string name="developed_by_1">Developed with</string>
  <string name="developed_by_2">by Gyanendro Kh.</string>
  <string name="title_activity_about">About</string>
  <string name="version">v0.0.1</string>
  <string name="about_text">This is just a simple Meitei Mayek Dictionary. \nThis project is Open
    Source licensed under the \"GNU General Public License v2.0\" and all the source code can be
    found at our Github page.</string>
  <string name="author">Author</string>
  <string name="website">Website</string>
  <string name="github">Github</string>
  <string name="author_link">https://gyanendrokh.github.io</string>
  <string name="website_linK">https://gyanendrokh.github.io/meiteimayek/dictionary</string>
  <string name="github_link">https://github.com/meiteimayek/dictionary</string>
</resources>
