<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/md_main_bg"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  android:paddingStart="5dp"
  android:paddingTop="15dp"
  android:paddingEnd="5dp"
  tools:context=".activity.AboutMeActivity">
  
  <ImageView
    android:layout_width="75dp"
    android:layout_height="75dp"
    android:contentDescription="@string/app_name"
    app:srcCompat="@mipmap/ic_launcher" />
  
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textColor="#dcdcdc"
    android:textSize="20sp"
    android:textStyle="bold" />
  
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:text="@string/version"
    android:textColor="#dcdcdc"
    android:textSize="15sp" />
  
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="15dp">
      
      <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:contentPadding="10dp">
        
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAlignment="center"
          android:text="@string/about_text" />
        
      </androidx.cardview.widget.CardView>
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">
        
        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/about_link_author"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_margin="5dp"
          android:background="@color/colorPrimaryLight"
          android:text="@string/author" />
  
        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/about_link_website"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_margin="5dp"
          android:background="@color/colorPrimaryLight"
          android:text="@string/website"/>
        
        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/about_link_github"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_margin="5dp"
          android:background="@color/colorPrimaryLight"
          android:text="@string/github" />
        
      </LinearLayout>
      
    </LinearLayout>
    
    <include
      layout="@layout/developed_by"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="10dp" />
  
  </RelativeLayout>

</LinearLayout>
