<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".fragment.BrowseFragment">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:text="@string/choose_a_language"
    android:textSize="20sp"
    android:textStyle="bold" />

  <androidx.cardview.widget.CardView
    android:id="@+id/browse_eng"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_marginBottom="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:contentPadding="15dp"
    app:contentPaddingLeft="20dp"
    app:contentPaddingRight="20dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/lang_english" />

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/browse_mmk"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_marginBottom="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:contentPadding="15dp"
    app:contentPaddingLeft="20dp"
    app:contentPaddingRight="20dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/lang_meitei_mayek" />

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/browse_beng"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_marginBottom="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:contentPadding="15dp"
    app:contentPaddingLeft="20dp"
    app:contentPaddingRight="20dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/lang_bengali" />

  </androidx.cardview.widget.CardView>

</LinearLayout>
